--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@studio-freight/lenis": "^1.0.33",
     "gsap": "^3.12.4",
+    "mysql": "^2.18.1",
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18",
