--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@studio-freight/lenis": "^1.0.33",
+    "crypto-js": "^4.2.0",
     "gsap": "^3.12.4",
     "mysql": "^2.18.1",
     "next": "14.0.4",
